# esp32-ipcam

./: CMakeLists.txt  LICENSE  README.md  ota.py  remote_log.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
.github/workflows/: main.yml
components/opus/: CMakeLists.txt
data/: config.json
main/: CMakeLists.txt  audio_encoder.c  audio_encoder.h  camera.c  camera.h  config.c  config.h  httpd.c  httpd.h  idf_component.yml  ipcam.c  microphone.c  microphone.h  motion_sensor.c  motion_sensor.h  ota.c  rtp.c  rtp.h  wifi.c
www/: index.html
www/js/: ipcam.js
